--- a/public/css/app.css
+++ b/public/css/app.css
@@ -192,8 +192,13 @@ main {
 }
 
 aside {
-    width: 200px; /* Adjust width as needed */
+    width: 200px; 
     background-color: #bab3a9;
+    padding-top: 20px;
+}
+
+aside .admin-links-container{
+    line-height: 2rem;
 }
 
 aside .admin-links-container .admin-links-link {
@@ -256,4 +261,40 @@ aside .admin-links-container .admin-links-link {
     text-align: left;
 }
 
-/* ABOUT PAGE styles */
+/* Create new Product Form styles */
+
+.text-center{
+    text-align: center;
+}
+
+form {
+    max-width: 400px;
+    margin: 2em auto;
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+input[type="text"], input[type="number"], textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+input[type="submit"] {
+    background-color: #BA6A52;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type="submit"]:hover {
+    background-color: #D0846E;
+}
