--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,6 +104,7 @@ main {
     padding: 0.4rem;
     background-color: white;
     border: 1px solid black;
+    border-radius: 4px;
 }
 
 .base-button:hover {
@@ -267,6 +268,14 @@ aside .admin-links-container .admin-links-link {
     text-align: center;
 }
 
+.text-white{
+    color: white;
+}
+
+.text-red{
+    color: red;
+}
+
 form {
     max-width: 400px;
     margin: 2em auto;
@@ -289,7 +298,8 @@ select {
     margin-bottom: 10px;
     box-sizing: border-box;
 }
-input[type="submit"] {
+
+.submit-button {
     background-color: #ba6a52;
     color: white;
     padding: 10px 20px;
@@ -297,7 +307,8 @@ input[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
 }
-input[type="submit"]:hover {
+
+.submit-button:hover {
     background-color: #d0846e;
 }
 
@@ -305,9 +316,9 @@ input[type="submit"]:hover {
 
 .alert {
     padding: 15px;
-    background-color: #d4edda; /* Green color */
-    color: #155724; /* Dark green color */
-    border: 1px solid #c3e6cb; /* Border color */
+    background-color: #d4edda; 
+    color: #155724; 
+    border: 1px solid #c3e6cb; 
     border-radius: 4px;
     margin-bottom: 15px;
 }
@@ -327,4 +338,49 @@ input[type="submit"]:hover {
 .text-danger {
     padding-bottom: 1.02em;
     color: red;
+}
+
+/* Delete button styles */
+
+.delete-button{
+    height: 40px;
+    background-color: #dc3545; 
+    color: #fff; 
+    padding: 8px 16px; 
+    border: none; 
+    border-radius: 4px; 
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+
+}
+
+.delete-button:hover {
+    background-color: #d63447; 
+}
+
+/* Confirm Delete Page */
+
+.confirm-delete-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 60%;
+    max-height: 60%;
+    margin: 2rem auto;
+    background-color: white;
+}
+
+.confirm-delete-div h1{
+    max-width: 50%;
+    text-align: center;
+    padding-top: 2em;
+}
+
+.buttons-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
 }
