--- a/public/css/app.css
+++ b/public/css/app.css
@@ -102,9 +102,15 @@ main {
 .base-button {
     height: 40px;
     padding: 0.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: white;
+    color: black;
     border: 1px solid black;
     border-radius: 4px;
+    width: 145px;
+    text-decoration: none;
 }
 
 .base-button:hover {
@@ -121,6 +127,11 @@ main {
     text-align: center;
 }
 
+.info-container h1{
+    padding: 1em;
+    max-width: 65%;
+}
+
 .info-container .container {
     max-width: 50%;
 }
@@ -130,17 +141,13 @@ main {
     font-size: 2.5rem;
 }
 
-.text-lightGray {
-    color: #a6a6a5;
-}
+
 
 .arrow-container {
     margin: 3rem 0 5rem;
 }
 
-.black-text {
-    color: black;
-}
+
 
 .link {
     text-decoration: none;
@@ -216,32 +223,35 @@ aside .admin-links-container .admin-links-link {
 /* NEW products styles */
 
 .new-products {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px; 
+}
+
+.products {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    margin: 5rem;
+    gap: 20px; 
+    margin-top: 1rem;
 }
 
 .new-products .product {
     margin-top: 1rem;
-    margin-right: 2rem;
-    max-width: 300px;
-    padding: 1rem;
     background-color: white;
+    border: 1px solid #dad9d9; 
+    padding: 20px; 
 }
 
 .img-container {
     max-width: 200px;
     height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center; 
 }
 
-.new-products .product .img-container img {
+.img-container img {
     max-width: 100%;
-    height: auto;
+    max-height: 200px;
+
 }
 
 .product-details {
@@ -254,6 +264,7 @@ aside .admin-links-container .admin-links-link {
 
 .base-button-container {
     margin-top: 1em;
+    text-align: center; 
 }
 
 .product-details-container {
@@ -272,8 +283,20 @@ aside .admin-links-container .admin-links-link {
     color: white;
 }
 
+.text-black {
+    color: black;
+}
+
 .text-red{
     color: red;
+}
+
+.text-lightGray {
+    color: #a6a6a5;
+}
+
+.border-red{
+    border: 2px solid red;
 }
 
 form {
@@ -343,20 +366,19 @@ select {
 /* Delete button styles */
 
 .delete-button{
-    height: 40px;
-    background-color: #dc3545; 
-    color: #fff; 
-    padding: 8px 16px; 
-    border: none; 
-    border-radius: 4px; 
+    color: red;
+    border: 1px solid red; 
     cursor: pointer;
     font-size: 16px;
-    transition: background-color 0.3s;
-
 }
 
 .delete-button:hover {
+    color: white;
     background-color: #d63447; 
+}
+
+.delete-button:hover a{
+    color: white;
 }
 
 /* Confirm Delete Page */
@@ -366,16 +388,10 @@ select {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 60%;
+    max-width: 50%;
     max-height: 60%;
     margin: 2rem auto;
     background-color: white;
-}
-
-.confirm-delete-div h1{
-    max-width: 50%;
-    text-align: center;
-    padding-top: 2em;
 }
 
 .buttons-container{
