--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,11 +76,30 @@ main {
 
 /* HOME styles */
 
+.banner-title {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    max-width: 35%;
+    margin: 0 auto;
+}
+
+.banner-title h1,
+span {
+    font-family: "Noto Serif Display", serif;
+    font-weight: 600;
+}
+
+.dark-green-text {
+    color: #625133;
+}
+
 .banner {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 53px);
     background-image: url("../assets/banner.svg");
-    background-size: contain;
+    background-size: cover;
+    background-position: center bottom;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
@@ -125,9 +144,10 @@ main {
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin: 3em auto;
 }
 
-.info-container h1{
+.info-container h1 {
     padding: 1em;
     max-width: 65%;
 }
@@ -141,13 +161,9 @@ main {
     font-size: 2.5rem;
 }
 
-
-
 .arrow-container {
     margin: 3rem 0 5rem;
 }
-
-
 
 .link {
     text-decoration: none;
@@ -222,36 +238,40 @@ aside .admin-links-container .admin-links-link {
 
 /* NEW products styles */
 
+.new-products-section {
+    margin: 4em auto;
+    padding: 2em 0;
+}
+
 .new-products {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px; 
+    gap: 20px;
 }
 
 .products {
     display: flex;
     align-items: center;
-    gap: 20px; 
+    gap: 20px;
     margin-top: 1rem;
-}
-
-.new-products .product {
-    margin-top: 1rem;
-    background-color: white;
-    border: 1px solid #dad9d9; 
-    padding: 20px; 
 }
 
 .img-container {
-    max-width: 200px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%;
     height: 200px;
-    text-align: center; 
+    text-align: center;
 }
 
 .img-container img {
     max-width: 100%;
     max-height: 200px;
+}
 
+.img-container .no-image-icon {
+    max-width: 20%;
 }
 
 .product-details {
@@ -264,7 +284,7 @@ aside .admin-links-container .admin-links-link {
 
 .base-button-container {
     margin-top: 1em;
-    text-align: center; 
+    text-align: center;
 }
 
 .product-details-container {
@@ -279,7 +299,7 @@ aside .admin-links-container .admin-links-link {
     text-align: center;
 }
 
-.text-white{
+.text-white {
     color: white;
 }
 
@@ -287,7 +307,7 @@ aside .admin-links-container .admin-links-link {
     color: black;
 }
 
-.text-red{
+.text-red {
     color: red;
 }
 
@@ -295,7 +315,7 @@ aside .admin-links-container .admin-links-link {
     color: #a6a6a5;
 }
 
-.border-red{
+.border-red {
     border: 2px solid red;
 }
 
@@ -307,14 +327,7 @@ label {
     display: block;
     margin-bottom: 5px;
 }
-input[type="text"],
-input[type="number"],
-textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-}
+
 select {
     width: 100%;
     padding: 8px;
@@ -322,8 +335,35 @@ select {
     box-sizing: border-box;
 }
 
+.input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    transition: border-color 0.3s ease;
+}
+
+.file-input::-webkit-file-upload-button {
+    padding: 8px 12px;
+    margin-bottom: 10px;
+    color: black;
+    border: 1px solid #52baba;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.file-input::-webkit-file-upload-button:hover {
+    background-color: #52baba;
+    color: white;
+}
+
 .submit-button {
-    background-color: #ba6a52;
+    background-color: #52baba;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -332,16 +372,16 @@ select {
 }
 
 .submit-button:hover {
-    background-color: #d0846e;
+    background-color: #3fa0a0;
 }
 
 /* ALERT styles */
 
 .alert {
     padding: 15px;
-    background-color: #d4edda; 
-    color: #155724; 
-    border: 1px solid #c3e6cb; 
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
     border-radius: 4px;
     margin-bottom: 15px;
 }
@@ -365,25 +405,25 @@ select {
 
 /* Delete button styles */
 
-.delete-button{
+.delete-button {
     color: red;
-    border: 1px solid red; 
+    border: 1px solid red;
     cursor: pointer;
     font-size: 16px;
 }
 
 .delete-button:hover {
     color: white;
-    background-color: #d63447; 
+    background-color: #d63447;
 }
 
-.delete-button:hover a{
+.delete-button:hover a {
     color: white;
 }
 
 /* Confirm Delete Page */
 
-.confirm-delete-div{
+.confirm-delete-div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -394,15 +434,19 @@ select {
     background-color: white;
 }
 
-.buttons-container{
+.buttons-container {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 20px;
 }
 
-/* Edit Button */
+/* Edit Page styles */
 
-.edit-button{
+.current-image-container {
+    margin-bottom: 10px;
+}
+
+.edit-button {
     background-color: #cccc;
 }
